--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
             <h5 class="card-header">Área de Rectángulo</h5>
             <div class="card-body">
     
-                <form id="areaRectanguloForm">
+                <form id="areaRectangulo">
                     <div class="form-group">
                         <label for="base">Base:</label>
                         <input type="number" class="form-control" id="base">
@@ -28,7 +28,7 @@
                         <input type="number" class="form-control" id="altura">
                     </div>
                     <button type="button" class="btn btn-primary" type="submit" onclick="calcularArea()">Calcular Área</button>
-                    <button type="button" class="btn btn-secondary ml-2" type="submit" onclick="limpiarForm()">Limpiar</button>
+                    <button type="button" class="btn btn-secondary ml-2" type="submit" onclick="limpiarFormulario()">Limpiar</button>
                 </form>
     
 
@@ -53,5 +53,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
